Fix layout issues with the start menu bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .desktop {
 	background-color: rgb(47, 115, 117);
-	min-height: 100vh;
-	min-width: 100vh;
+	height: 100vh;
+	width: 100vw;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 #start-bar {
 	position: absolute;
-	bottom: 0;
-	width: 100%;
+	bottom: 52px;
+	width: 100vw;
 }
